--- a/src/index.html
+++ b/src/index.html
@@ -15,7 +15,9 @@
     <link href="assets/css/style.css" rel="stylesheet">
     <!-- You can change the theme colors from here -->
     <link id="tema" id="theme" rel="stylesheet">
-
+    <!-- Google-->
+    <script src="https://apis.google.com/js/platform.js"></script>
+    <meta name="google-signin-client_id" content="984910311506-0pn0l1g6g5892b69v8n2nloeoge0c8ak.apps.googleusercontent.com">
 
 </head>
 
